# Registration

./: AUTHORS.md  CMakeLists.txt  README.md  RegistrationConfig.cmake.in
.github/workflows/: ci.yml
Registration_run/: QMainWindow_RegistrationRun.cpp  QMainWindow_RegistrationRun.h  QSofaScene.cpp  QSofaScene.h  QSofaViewer.cpp  QSofaViewer.h  Registration_run.cpp
Registration_test/: CMakeLists.txt  GroupwiseRegistrationEngine_test.cpp  InertiaAlign_test.cpp  IntensityProfileCreator_test.cpp  IntensityProfileRegistrationForceField_test.cpp
examples/: ICPRegistration_MeshSpring.scn  ICPRegistration_ShapeMatching_Engine.scn  imageregistration.scn  test_InertiaAlign.scn  test_InertiaAlign2.scn  test_InertiaAlign3.scn
src/Registration/: ClosestPointRegistrationForceField.cpp  ClosestPointRegistrationForceField.h  ClosestPointRegistrationForceField.inl  GroupwiseRegistrationEngine.cpp  GroupwiseRegistrationEngine.h  InertiaAlign.cpp  InertiaAlign.h  IntensityProfileCreator.cpp  IntensityProfileCreator.h  IntensityProfileRegistrationForceField.cpp  IntensityProfileRegistrationForceField.h  IntensityProfileRegistrationForceField.inl  RegistrationContact.cpp  RegistrationContact.h  RegistrationContact.inl  RegistrationContactForceField.cpp  RegistrationContactForceField.inl  RegistrationExporter.cpp  RegistrationExporter.h  config.h.in  initRegistration.cpp
